--- a/src/etc/clicraft-defaults.conf
+++ b/src/etc/clicraft-defaults.conf
@@ -17,7 +17,7 @@
 # location of the clicraft binary.
 #
 # Default:
-# One directory up from where the clicraft binary sits, i.e.,
+# One directory up from where the clicraft executable sits, i.e.,
 #CLICRAFT="$(dirname $(dirname $(readlink -f $0)))"
 
 
