Change DOWNLOADER to DOWNLOAD_COMMAND
This is more in keeping with START_COMMAND and reduces the length of the
explanation needed in clicraft-defaults.conf.

--- a/src/etc/clicraft-defaults.conf
+++ b/src/etc/clicraft-defaults.conf
@@ -61,7 +61,7 @@
 #START_COMMAND="java -jar '$SERVER_JAR' nogui"
 #
 # Recommended:
-#START_COMMAND="/opt/java/bin/java -client -XX:+UseConcMarkSweepGC -XX:+UseParNewGC -XX:+CMSIncrementalPacing -XX:+AggressiveOpts -Xmx1450M -jar minecraft_server.jar nogui"
+#START_COMMAND="/opt/java/bin/java -client -XX:+UseConcMarkSweepGC -XX:+UseParNewGC -XX:+CMSIncrementalPacing -XX:+AggressiveOpts -Xmx1450M -jar '$SERVER_JAR' nogui"
 
 # BACKUP_DIR
 # The directory for storing backups taken by the backup.sh action script.
@@ -69,11 +69,9 @@
 # Default:
 #BACKUP_DIR="$SRV/backups"
 
-# DOWNLOADER
-# The command used to download the server jar. What actually gets executed is
-# `$DOWNLOADER "$SERVER_JAR" "$SERVER_URL"', so this needs to be specified so
-# that it can take the jar location and url as its last arguments.
+# DOWNLOAD_COMMAND
+# The command used to download or update the server jar.
 #
 # Default:
-#DOWNLOADER="curl -# -o"
+#DOWNLOAD_COMMAND="curl -# -o '$SERVER_JAR' '$SERVER_URL'"
 
