Add usage to backup script
Since this is our only example script for now, it's imperative
that it has an example usage comment.

--- a/src/etc/action.d/backup.sh.example
+++ b/src/etc/action.d/backup.sh.example
@@ -1,4 +1,9 @@
 #!bash
+#
+# Usage: clicraft backup
+#
+#    Backs up the world folder to backups/<world>-<date>-<time>.zip
+#
 
 BACKUP_DIR="$SERVER_DIR/backups"
 WORLD=$(grep 'level-name=' server.properties | cut -d '=' -f 2)
