--- a/src/etc/clicraft-defaults.conf
+++ b/src/etc/clicraft-defaults.conf
@@ -57,5 +57,5 @@
 # The command used to download or update the server jar.
 #
 # Default:
-#DOWNLOAD_COMMAND="curl -# -o $SERVER_JAR $SERVER_URL"
+#DOWNLOAD_COMMAND="curl -#L -o $SERVER_JAR $SERVER_URL"
 
