--- a/src/etc/clicraft-defaults.conf
+++ b/src/etc/clicraft-defaults.conf
@@ -46,6 +46,17 @@
 #SERVER_URL="https://s3.amazonaws.com/MinecraftDownload/launcher/minecraft_server.jar"
 
 
+# SERVER_TYPE
+# If this variable is set to "bukkit", SERVER_JAR and SERVER_URL will take on
+# default values such that the server uses Bukkit Recommended Builds, instead
+# of the vanilla minecraft jar. That is, they will have these default values:
+#SERVER_JAR="$SERVER_DIR/craftbukkit.jar"
+#SERVER_URL="http://cbukk.it/craftbukkit.jar"
+#
+# Default:
+#SERVER_TYPE=""
+
+
 # START_COMMAND
 # The command that should be used to launch the server.
 #
