--- a/Makefile.in
+++ b/Makefile.in
@@ -1,4 +1,5 @@
-SHELL = /bin/sh
+SHELL=/bin/sh
+VPATH=@srcdir@
 
 prog=clicraft
 
@@ -68,6 +69,24 @@ uninstall:
 	#rm -rf $(DESTDIR)$(sysconfdir)/$(prog)/
 
 check:
+
+# automatic re-running of configure if the configure.in file has changed
+${srcdir}/configure: configure.in aclocal.m4
+	cd ${srcdir} && autoconf
+
+# autoheader might not change config.h.in, so touch a stamp file
+${srcdir}/config.h.in: stamp-h.in
+${srcdir}/stamp-h.in: configure.in aclocal.m4
+		cd ${srcdir} && autoheader
+		echo timestamp > ${srcdir}/stamp-h.in
+
+config.h: stamp-h
+stamp-h: config.h.in config.status
+	./config.status
+Makefile: Makefile.in config.status
+	./config.status
+config.status: configure
+	./config.status --recheck
 
 .PHONY: all clean installdirs install uninstall check
 
