Use proper arguments to AC_INIT
Using the name/version of our program in ./configure --help output
is probably a good idea.

--- a/Makefile.in
+++ b/Makefile.in
@@ -1,3 +1,8 @@
+PROG=@PACKAGE_TARNAME@
+VERSION=@PACKAGE_VERSION@
+BUGREPORT=@PACKAGE_BUGREPORT@
+URL=@PACKAGE_URL@
+
 SHELL=/bin/sh
 VPATH=@srcdir@
 
