Define useful autoconf substitutions
I expect I'll be relying on some of these heavily enough to warrant
stripping PACKAGE_ from the variable name.

--- a/Makefile.in
+++ b/Makefile.in
@@ -1,7 +1,8 @@
-PROG=@PACKAGE_TARNAME@
-VERSION=@PACKAGE_VERSION@
-BUGREPORT=@PACKAGE_BUGREPORT@
-URL=@PACKAGE_URL@
+PACKAGE=@PACKAGE@
+PROG=@PROG@
+VERSION=@VERSION@
+BUGREPORT=@BUGREPORT@
+URL=@URL@
 
 SHELL=/bin/sh
 VPATH=@srcdir@
