--- a/configure.in
+++ b/configure.in
@@ -6,6 +6,12 @@ AC_INIT([clicraft], [0.0.3], [https://github.com/DMBuce/clicraft/issues], [clicr
 
 dnl BEGIN BUCE'S STUFF
 
+AC_SUBST([PACKAGE], [$PACKAGE_NAME])
+AC_SUBST([PROG], [$PACKAGE_TARNAME])
+AC_SUBST([VERSION], [$PACKAGE_VERSION])
+AC_SUBST([BUGREPORT], [$PACKAGE_BUGREPORT])
+AC_SUBST([URL], [$PACKAGE_URL])
+
 dnl END BUCE'S STUFF
 
 # Checks for programs.
