--- a/src/bin/clicraft.in
+++ b/src/bin/clicraft.in
@@ -1,7 +1,7 @@
 #!/bin/bash
 
-PROG="$(basename $0)"
-VERSION="0.0.3"
+PROG="@PROG@"
+VERSION="@VERSION@"
 
 BIN="$(dirname $(readlink -f $0))"
 CLICRAFT="${CLICRAFT-$(dirname $BIN)}"
