Add useful directory substitutions
These should come in handy when making clicraft more FHS-compliant.

--- a/configure.ac
+++ b/configure.ac
@@ -6,11 +6,16 @@ AC_INIT([clicraft], [0.0.3], [https://github.com/DMBuce/clicraft/issues], [clicr
 
 dnl BEGIN BUCE'S STUFF
 
+dnl package info
 AC_SUBST([PACKAGE], [$PACKAGE_NAME])
 AC_SUBST([PROG], [$PACKAGE_TARNAME])
 AC_SUBST([VERSION], [$PACKAGE_VERSION])
 AC_SUBST([BUGREPORT], [$PACKAGE_BUGREPORT])
 AC_SUBST([URL], [$PACKAGE_URL])
+
+dnl important dirs
+AC_SUBST([CONFDIR], [$sysconfdir/$PROG])
+AC_SUBST([EXECDIR], [$libexecdir/$PROG])
 
 dnl END BUCE'S STUFF
 
