--- a/scripts/bash_completion.in
+++ b/scripts/bash_completion.in
@@ -17,18 +17,18 @@ _clicraft_help() {
 }
 
 _clicraft() {
-	local BINDIR CLICRAFT CONFDIR EXECDIR
-	BINDIR="$(dirname $(readlink -f $(which clicraft)))"
-	CLICRAFT="${CLICRAFT-$(dirname $BINDIR)}"
-	CONFDIR="$CLICRAFT/etc"
-	EXECDIR="$CLICRAFT/lib"
+	local prefix exec_prefix CONFDIR EXECDIR
+	prefix=@prefix@
+	exec_prefix=@exec_prefix@
+	CONFDIR="@CONFDIR@"
+	EXECDIR="@EXECDIR@"
 
 	local SERVER_DIR SERVER_NAME SERVER_JAR SERVER_URL START_COMMAND DOWNLOAD_COMMAND
 	. "$EXECDIR/defaults.sh"
 	. "$EXECDIR/functions.sh"
 	
-	if [ -f "$CLICRAFT/etc/clicraft.conf" ]; then
-	    . "$CLICRAFT/etc/clicraft.conf"
+	if [ -f "$CONFDIR/clicraft.conf" ]; then
+	    . "$CONFDIR/clicraft.conf"
 	fi
 
 	local cur prev
