--- a/src/lib/defaults.sh.in
+++ b/src/lib/defaults.sh.in
@@ -1,6 +1,6 @@
 #!bash
 
-SERVER_DIR="${SERVER_DIR-$CLICRAFT/srv}"
+SERVER_DIR="${SERVER_DIR-@SERVER_DIR@}"
 
 SERVER_NAME="${SERVER_NAME-minecraft}"
 
