Add scripts/ Makefile
This adds a makefile that installs the stuff in the scripts/
directory.

It also adds two options, --with-mcexplore and --with-c10t, to
./configure, which allow installation of the 'explore' and 'map'
action scripts, respectively.

--- a/Makefile.in
+++ b/Makefile.in
@@ -50,8 +50,7 @@ INSTALL=@INSTALL@
 INSTALL_PROGRAM=@INSTALL_PROGRAM@
 INSTALL_DATA=@INSTALL_DATA@
 
-#SUBDIRS = scripts src
-SUBDIRS = src
+SUBDIRS = scripts src
 
 all: $(SUBDIRS)
 
