Create SERVER_DIR during install
This should be helpful to packagers, who would likely want the
default SERVER_DIR to belong to the package they're building.

--- a/Makefile.in
+++ b/Makefile.in
@@ -6,6 +6,7 @@ URL=@URL@
 
 CONFDIR=@CONFDIR@
 EXECDIR=@EXECDIR@
+SERVER_DIR=@SERVER_DIR@
 
 WITH_MCEXPLORE = @WITH_MCEXPLORE@
 WITH_C10T = @WITH_C10T@
