Make distclean depend on clean
Makefile.inc's clean target doesn't do anything right now, but if
it does in the future, the depend target will want to remove
anything it does, too.

--- a/Makefile.inc
+++ b/Makefile.inc
@@ -44,7 +44,7 @@ dist:
 	tar czvf $(PROG)-$(VERSION).tar.gz $(PROG)-$(VERSION)
 
 .PHONY: distclean
-distclean:
+distclean: clean
 	rm -f $(DISTCLEAN)
 
 .SECONDARY: $(CLEAN) $(UNINSTALL)
