Glob on example action scripts
Listing every single action script to install would quickly become
a maintenance nightmare, so just glob on them to make things easier.

--- a/src/Makefile.inc
+++ b/src/Makefile.inc
@@ -14,7 +14,7 @@ UNINSTALL := $(UNINSTALL) \
              $(DESTDIR)$(EXECDIR)/action.d/*.sh \
              $(DESTDIR)$(EXECDIR)/defaults.sh \
              $(DESTDIR)$(CONFDIR)/clicraft-defaults.conf \
-             $(DESTDIR)$(CONFDIR)/action.d/backup.sh.example
+             $(DESTDIR)$(CONFDIR)/action.d/*.sh.example
 
 .PHONY: src-install
 src-install:
@@ -23,6 +23,6 @@ src-install:
 	$(INSTALL_DATA) src/lib/defaults.sh                $(DESTDIR)$(EXECDIR)/defaults.sh
 	$(INSTALL_DATA) src/lib/action.d/*.sh              $(DESTDIR)$(EXECDIR)/action.d/
 	$(INSTALL_DATA) src/etc/clicraft-defaults.conf     $(DESTDIR)$(CONFDIR)/clicraft-defaults.conf
-	$(INSTALL_DATA) src/etc/action.d/backup.sh.example $(DESTDIR)$(CONFDIR)/action.d/backup.sh.example
+	$(INSTALL_DATA) src/etc/action.d/*.sh.example      $(DESTDIR)$(CONFDIR)/action.d/
 	
 # vim: set ft=make:
