--- a/Makefile.inc
+++ b/Makefile.inc
@@ -15,6 +15,7 @@ all: targets
 include scripts/Makefile.inc
 include src/Makefile.inc
 include dist/Makefile.inc
+include doc/Makefile.inc
 
 .PHONY: targets
 targets: $(TGT_TARGETS)
