Spruce up links in docs
Four things:

* Add some links where appropriate
* Re-format existing links better
* Generalize some links using autotools
* Add icons for AsciiDoc NOTEs and such

--- a/doc/Makefile.inc
+++ b/doc/Makefile.inc
@@ -1,5 +1,9 @@
 
-ASCIIDOC_OPTS=-f doc/asciidoc.conf -d manpage -a CONFDIR=$(CONFDIR) -a SERVER_DIR=$(SERVER_DIR)
+ASCIIDOC_OPTS=-f doc/asciidoc.conf -d manpage \
+	-a CONFDIR=$(CONFDIR) \
+	-a SERVER_DIR=$(SERVER_DIR) \
+	-a BUGREPORT=$(BUGREPORT) \
+	-a URL=$(URL)
 
 .PHONY: doc
 doc: all
@@ -7,7 +11,7 @@ doc: all
 	a2x --no-xmllint -d manpage -f manpage --asciidoc-opts="${ASCIIDOC_OPTS}" doc/clicraft.conf.5.txt
 
 html: all
-	asciidoc ${ASCIIDOC_OPTS} -a toc -a max-width=960px doc/clicraft.1.txt
-	asciidoc ${ASCIIDOC_OPTS} -a toc -a max-width=960px doc/clicraft.conf.5.txt
+	asciidoc ${ASCIIDOC_OPTS} -a toc -a icons -a max-width=960px doc/clicraft.1.txt
+	asciidoc ${ASCIIDOC_OPTS} -a toc -a icons -a max-width=960px doc/clicraft.conf.5.txt
 
 # vim: set ft=make:
