Add new docs to .gitignore, Makefile
Install the man pages when possible and don't include AsciiDoc
artifacts.

Reworked and generalized the Makefile.inc for doc/ a bunch while
modifying the targets.

This more or less closes issue #2.

--- a/.gitignore
+++ b/.gitignore
@@ -25,10 +25,8 @@ dist/deb/var
 
 # doc build artifacts
 README.html
-doc/clicraft.1
-doc/clicraft.1.html
-doc/clicraft.conf.5
-doc/clicraft.conf.5.html
+doc/*.[15]
+doc/*.html
 
 # from ctags
 tags
