Remove references to TODO
This file was removed in commit 10ac7b97af13d9ba2315a647d209623478a65985

--- a/Makefile.inc
+++ b/Makefile.inc
@@ -6,7 +6,7 @@ TGT_INSTALL :=
 INSTALLDIRS :=
 UNINSTALL   :=
 DIST        := configure Makefile.in Makefile.inc \
-               INSTALL LICENSE README TODO
+               INSTALL LICENSE README
 DISTCLEAN   := Makefile config.log config.status
 
 .PHONY: all
