Abstract multiplexer logic
Move tmux-specific calls into separate multiplexer_* functions so
that adding support for other multiplexers is easier, and add a
config option for choosing between the available multiplexers.

--- a/src/bin/clicraft.in
+++ b/src/bin/clicraft.in
@@ -16,6 +16,13 @@ fi
 
 . "$EXECDIR/defaults.sh"
 . "$EXECDIR/functions.sh"
+if [ ! -f "$EXECDIR/$MULTIPLEXER.sh" ] || \
+   ! which "$MULTIPLEXER" &>/dev/null; then
+	err "Invalid multiplexer: $MULTIPLEXER"
+	exit 1
+else
+	. "$EXECDIR/$MULTIPLEXER.sh"
+fi
 
 # bail if we're root
 if [ "$(id -u)" = "0" ]; then
