Add screen support
Add support for GNU Screen.

--- a/src/Makefile.inc
+++ b/src/Makefile.inc
@@ -1,6 +1,6 @@
 SRC_BINFILES  := src/bin/clicraft
 SRC_EXECFILES := src/lib/functions.sh src/lib/defaults.sh \
-                 src/lib/tmux.sh \
+                 src/lib/tmux.sh src/lib/screen.sh \
                  $(wildcard src/lib/action.d/*.sh)
 SRC_CONFFILES := src/etc/clicraft-defaults.conf \
                  $(wildcard src/etc/action.d/*.sh.example)
