--- a/src/lib/defaults.sh.in
+++ b/src/lib/defaults.sh.in
@@ -14,6 +14,6 @@ else
 	SERVER_URL="${SERVER_URL-https://s3.amazonaws.com/MinecraftDownload/launcher/minecraft_server.jar}"
 fi
 
-START_COMMAND="${START_COMMAND-java -jar '$SERVER_JAR' nogui}"
+START_COMMAND="${START_COMMAND-java -jar $SERVER_JAR nogui}"
 DOWNLOAD_COMMAND="${DOWNLOAD_COMMAND-curl -#L -o "$SERVER_JAR" "$SERVER_URL"}"
 
