Uncomment code in example template
Due to commit 8be221dd, we can add example code to the templates
for users to base new actions scripts off of. Might as well.

--- a/src/etc/action.d/action-override.sh.example
+++ b/src/etc/action.d/action-override.sh.example
@@ -8,11 +8,9 @@
 #    Overrides the default `clicraft $ACTION' with custom functionality.
 #
 
-## Recommended way of overriding system action scripts:
-#
-## do stuff before system "$ACTION" action script
-#
-#sys_action $ACTION "$@"
-#
-## do stuff after system "$ACTION" action script
+# TODO: stuff before system "$ACTION" action script
+
+sys_action $ACTION "$@"
+
+# TODO: stuff after system "$ACTION" action script
 
